# VUT-FIT-MITAI-NSEC

./: README.md
1MITAI/AVS/Projekt1/: CMakeLists.txt
1MITAI/AVS/Projekt1/Data/: testRefOutput.h5
1MITAI/AVS/Projekt1/PapiHeader/: papi_cntr.h
1MITAI/AVS/Projekt1/Scripts/: compareOutputs.py  showNumber.py
1MITAI/AVS/Projekt1/Step0/: main.cpp  neuron.cpp  neuron.h
1MITAI/AVS/Projekt1/Step1/: main.cpp  neuron.cpp  neuron.h
1MITAI/AVS/Projekt1/Step2/: main.cpp  neuron.cpp  neuron.h
1MITAI/AVS/Projekt1/Step3/: main.cpp  neuron.cpp  neuron.h
1MITAI/AVS/Projekt1/Step4/: main.cpp  neuron.cpp
1MITAI/AVS/Projekt2/src/: PMC-xfirca00.txt
1MITAI/AVS/Projekt2/src/parallel_builder/: loop_mesh_builder.cpp  loop_mesh_builder.h  tree_mesh_builder.cpp  tree_mesh_builder.h
1MITAI/SUI/xadvanced00/: phased.py  utils.py
1MITAI/UPA/src/main/java/upa/: Main.java
1MITAI/UPA/src/main/java/upa/controllers/: MapController.java  UserController.java
1MITAI/UPA/src/main/java/upa/model/: DatabaseModel.java  ScriptRunner.java
1MITAI/UPA/src/main/java/upa/model/land/: Land.java  LandModel.java
1MITAI/UPA/src/main/java/upa/model/photo/: Photo.java  PhotoModel.java
1MITAI/UPA/src/main/java/upa/model/property/: Property.java  PropertyModel.java
1MITAI/UPA/src/main/java/upa/model/user/: User.java  UserModel.java
1MITAI/UPA/src/main/java/upa/view/main/: DatabaseSetupView.java  ImageViewer.java  UploadImage.java
1MITAI/UPA/src/main/java/upa/view/map/: MapView.java  NewLandFormView.java  NewPropertyFormView.java  ObjectDetailView.java  PhotoButton.java
2MITAI/FLP/Projekt_FUN/: Makefile
2MITAI/FLP/Projekt_FUN/doc/: README
2MITAI/FLP/Projekt_FUN/src/: NKAmodule.hs  PLGmodule.hs  PLGtransform.hs  plg-2-nka.hs
2MITAI/FLP/Projekt_LOG/: Makefile  README  flp20-log.pl  steps_1.in  steps_2.in  steps_3.in  steps_4.in  steps_5.in  steps_6.in  steps_7.in  steps_8.in
2MITAI/KRY/Proj2/: CipherModule.cpp  CipherModule.hpp  KeyGenerator.cpp  KeyGenerator.hpp  Makefile  RSABreaker.cpp  RSABreaker.hpp  kry.cpp  kry.hpp
2MITAI/PDS/Parser/: FTPparser.cs  Message.cs
2MITAI/PDS/Test/: Tests.cs
2MITAI/PRL/Proj2/: ots.cpp  test.sh
2MITAI/PRL/Proj3/: test.sh  vid.cpp
3MITAI/GJA/: pom.xml
3MITAI/GJA/src/main/java/com/vut/fit/gja2020/app/: AppApplication.java  ServletInitializer.java
3MITAI/GJA/src/main/java/com/vut/fit/gja2020/app/beans/: AccountManagement.java  CourseManagement.java  Dashboard.java  ImportHandlerBean.java  Mailer.java  SMTP.java  StudentProfileBean.java
3MITAI/GJA/src/main/java/com/vut/fit/gja2020/app/configurations/: SecurityConfig.java
3MITAI/GJA/src/main/java/com/vut/fit/gja2020/app/controllers/: RedirectController.java
3MITAI/GJA/src/main/webapp/: dashboard.xhtml  login.xhtml  student.xhtml
3MITAI/GJA/src/main/webapp/WEB-INF/: faces-config.xml  web.xml
3MITAI/GJA/src/main/webapp/partial/panels/: accounts.xhtml  courses.xhtml  groups.xhtml  mailing.xhtml  smtp.xhtml  students.xhtml
3MITAI/GJA/src/main/webapp/partial/tabs/: courses.xhtml  groups.xhtml  students.xhtml
3MITAI/GJA/src/main/webapp/resources/style/scss/: _mixins.scss  _tabs.scss  _varaibles.scss  layout.scss
3MITAI/GJA/src/main/webapp/resources/style/scss/.sass-cache/c72ad6b0f93cdd01fcc2d13271881b1bf73e9536/: _mixins.scssc  _tabs.scssc  _varaibles.scssc  layout.scssc
3MITAI/GJA/src/main/webapp/resources/style/scss/.sass-cache/f43c6e8687364d7e9136b07bcc096f67b72b71b0/: layout.scssc
3MITAI/GJA/src/test/java/com/vut/fit/gja2020/app/: AppApplicationTests.java
3MITAI/PDB/code/: cassandra.cql  demo_data.cql  demo_data.sql  docker-compose.yml  tables.sql
3MITAI/PDB/code/pdb_app/: pom.xml
3MITAI/PDB/code/pdb_app/docs/: fe-be_actions.md
3MITAI/PDB/code/pdb_app/src/main/resources/: application.properties
3MITAI/PDB/code/pdb_app/src/main/resources/templates/: chats.html  page.html  post.html  subscribe.html  user.html
(+148 files in other folders)
